# multi_tenant_app

./: .gitignore  Makefile  README.md  pyproject.toml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt  setup.cfg
backend/examples/simple_console_bot/: main.py
backend/examples/whatsapp_bot/: docker-compose.yml  main.py
backend/src/: __init__.py  cli.py  main.py
backend/src/api/: __init__.py  admin.py  main_api.py
backend/src/channels/: __init__.py  base.py  slack.py  telegram.py  web_chat.py  whatsapp_twilio.py
backend/src/config/: __init__.py  settings.py
backend/src/core/: __init__.py  agent.py  context.py  engine.py  errors.py  message.py  middleware.py  orchestrator.py  router.py  tenant_middleware.py
backend/src/core/agents/: __init__.py  google_sdk_agent.py  langchain_agent.py  langgraph_agent.py  pydantic_ai_agent.py  raw_agent.py
backend/src/customers/: __init__.py  base.py  loader.py
backend/src/customers/acme/: __init__.py  config.py  flows.py  prompts.py
backend/src/domain/: __init__.py  flows.py  handlers.py  prompts.py
backend/src/llm/: __init__.py  anthropic_provider.py  azure_openai.py  base.py  bedrock_provider.py  groq_provider.py  local_ollama.py  openai_provider.py
backend/src/rag/: __init__.py  indexer.py  retriever.py
backend/src/storage/: database.py  tenancy.py  tenant_provisioning.py
backend/src/tools/: __init__.py
backend/src/utils/: __init__.py  ids.py  logging.py  time.py
backend/tests/test_channels/: __init__.py
backend/tests/test_core/: __init__.py
backend/tests/test_llm/: __init__.py
(+17 files in other folders)
