[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "multi-tenant-app"
version = "0.1.0"
description = "Backend multi-tenant app for a single chatbot product customized per customer."
requires-python = ">=3.13"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # Settings
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.29.0",
    # LLM providers
    "openai>=1.35.0",
    "httpx>=0.27.0",
    # Channel integrations
    "python-telegram-bot>=21.0",
    "slack-sdk>=3.27.0",
    "twilio>=9.0.0",
    # Utilities
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
rag = [
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
]
